--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,7 +256,7 @@ main .section.highlight {
   padding: 40px 0;
 }
 
-/* HDFC journey pages: collapse EDS nav spacer when standalone header form is present */
-body:has(.field-header-test):not(:has(main input, main button)) {
+/* HDFC journey pages: collapse EDS nav spacer when header fragment is present */
+body:has(.field-header-test) {
   --nav-height: 0px;
 }
